[package]
name = "tui-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
color-eyre = "0.6.5"
crossterm = "0.29.0"
rand = "0.10.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
