[package]
name = "CLInnections"
version = "0.1.0"
edition = "2024"
authors = ["Pedro Pontes García <pp457@cornell.edu>"]
license = "MIT"
description = "The daily NYT Connections puzzle, right from your command line!"
readme = "README.md"
homepage = "https://github.com/pedropontesgarcia/clinnections"
repository = "https://github.com/pedropontesgarcia/clinnections"
keywords = ["cli", "connections", "game", "puzzle"]
categories = ["games"]

[dependencies]
chrono = "0.4.44"
color-eyre = "0.6.5"
crossterm = "0.29.0"
rand = "0.10.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
